# skiff

./: .clang-format  .gitignore  LICENSE  README.md  contributing.md
.circleci/: config.yml
.github/: pull_request_template.md
docs/: Design.md  Example_Code.md  README.md  adding_instructions.md  assembler.md  binary_format_v1.md  example_programs.md  instruction_set_v1.md  instruction_set_v1_condensed.md  vm_layout.md
docs/assembler/: about.md
scripts/: install_libskiff.sh  install_libutil.sh
src/: CMakeLists.txt  assemble.cpp  assemble.hpp  config.hpp  defines.hpp  options.hpp  skiffd.cpp  types.hpp
src/assembler/: assemble.cpp  assemble.hpp
src/libskiff/: CMakeLists.txt
src/libskiff/include/libskiff/: binary.hpp  binary_generator.hpp  coder.hpp  defines.hpp  floating_point.hpp  instruction_generator.hpp  instructions.hpp  memory.hpp  system.hpp  types.hpp  version.hpp
src/libskiff/include/libskiff/assembler/: assemble.hpp
src/libskiff/include/libskiff/bytecode/: binary.hpp  executable.hpp  floating_point.hpp  helpers.hpp  instructions.hpp  loader.hpp
src/libskiff/include/libskiff/generators/: binary_generator.hpp  instruction_generator.hpp
src/libskiff/include/libskiff/machine/: execution_context.hpp  memory.hpp  stack.hpp  vm.hpp
src/libskiff/include/libskiff/machine/memory/: memman.hpp  memory.hpp  stack.hpp
src/libskiff/include/libskiff/machine/system/: call.hpp  interrupt_emitter.hpp  print.hpp  timer.hpp
src/libskiff/src/: binary_generator.cpp  floating_point.cpp  instruction_generator.cpp
src/libskiff/src/assembler/: assemble.cpp
src/libskiff/src/bytecode/: executable.cpp  floating_point.cpp  loader.cpp
src/libskiff/src/generators/: binary_generator.cpp  instruction_generator.cpp
src/libskiff/src/machine/: execution_context.cpp  memory.cpp  stack.cpp  vm.cpp  vm_instruction_decode.cpp  vm_load_binary.cpp
src/libskiff/src/machine/memory/: memman.cpp  memory.cpp  stack.cpp
src/libskiff/src/machine/system/: print.cpp  timer.cpp
src/libskiff/tests/: CMakeLists.txt  assembler.cpp  coder_tests.cpp  example.cpp  floating_point.cpp  instruction_generator.cpp  main.cpp  memman.cpp  memory.cpp  stack.cpp  vm_execution_tests.cpp
src/libutil/: CMakeLists.txt  README.md
src/libutil/include/libutil/: floating_point.hpp  generate_random.hpp  random_entry.hpp  random_string.hpp
src/libutil/src/: floating_point.cpp  random_string.cpp
src/libutil/tests/: CMakeLists.txt  floating_point.cpp  generate_random.cpp  random_entry.cpp  random_string.cpp
src/logging/: aixlog.hpp
src/machine/: execution_context.cpp  execution_context.hpp  vm.cpp  vm.hpp  vm_load_binary.cpp
src/machine/memory/: memman.cpp  memman.hpp  memory.cpp  memory.hpp  stack.cpp  stack.hpp
src/machine/system/: callable.hpp  interrupt_emitter.hpp  io_disk.cpp  io_disk.hpp  io_user.cpp  io_user.hpp  print.cpp  print.hpp  timer.cpp  timer.hpp
src/tests/: CMakeLists.txt  assembler.cpp  example_tests.cpp  instruction_generator.cpp  main.cpp  memman.cpp  memory.cpp  stack.cpp
src/vm_check/: run.py
src/vm_check/arithmetic/: 0_addition.asm  0_bitwise.asm  0_division.asm  0_multiplication.asm  1_divide_zero_float.asm  1_divide_zero_integer.asm
src/vm_check/asserts/: 0_aseq_pass.asm
src/vm_check/branching/: 0_float_based_branching.asm  0_integer_based_branching.asm  0_jmp.asm
src/vm_check/memory/: 0_alloc_and_free.asm  0_load_store.asm  0_stack.asm
src/vm_check/misc/: 0_modulus.asm  11_macro.asm
src/vm_check/movs/: 0_move.asm  99_mov.asm
src/vm_programs/: interrupt_timer.asm  primality.asm  print.asm  timer  timer.asm
vm_check/: about.md
vm_check/arithmetic/: 0_subtraction.asm
vm_check/asserts/: 0_asne_pass.asm  1_aseq_hit.asm  1_asne_hit.asm
vm_check/branching/: 0_call.asm
vm_check/memory/: 0_load_store.asm  0_stack.asm
vm_programs/: disk_io.asm  interrupt_timer.asm  user_io.asm
